--- a/modulo4/ToDoList/package.json
+++ b/modulo4/ToDoList/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "knex": "^2.2.0",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
