--- a/modulo6/estantevirtual-case/package.json
+++ b/modulo6/estantevirtual-case/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./build/index.js",
-    "dev":"ts-node-dev ./src/index.ts",
+    "dev": "ts-node-dev ./src/index.ts",
     "migrations": "tsc && node ./build/database/migrations/Migrations.js",
     "build": "tsc"
   },
@@ -16,13 +16,19 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/knex": "^0.16.1",
     "@types/uuid": "^8.3.4",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
     "jest": "^29.1.2",
     "ts-jest": "^29.0.3",
