--- a/modulo6/estantevirtual-case/package.json
+++ b/modulo6/estantevirtual-case/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node ./build/index.js",
     "dev": "ts-node-dev ./src/index.ts",
     "migrations": "tsc && node ./build/database/migrations/Migrations.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
-    "@types/jest": "^29.1.1",
+    "@types/jest": "^29.1.2",
     "jest": "^29.1.2",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0"
