--- a/modulo6/amaroconsulta/package.json
+++ b/modulo6/amaroconsulta/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projeto-cookenu-backend",
+  "name": "desafio-back-end-amaro",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
